# metrix

./: .gitignore  Cargo.toml  Makefile  README.md
db/: Cargo.toml  systemd.service
db/src/: lib.rs  metric.rs  metric_history.rs  metric_info.rs
db/src/metric_history/: fetch.rs  fetch_history.rs  fetch_last.rs  fetch_last_bulk.rs  fetch_latest.rs  insert.rs  storage.rs
db/src/metric_info/: fetch_all.rs  lookup.rs  storage.rs
exporter/: Cargo.toml
exporter/src/: error.rs  lib.rs
prometheus_exporter/: Cargo.toml
prometheus_exporter/src/: collector.rs  exporters.rs
server/: Cargo.toml  systemd.service
server/src/: main.rs
src/: collector.rs  data.rs  lib.rs
web/: package-lock.json  package.json  vue.config.js
web/src/: App.vue  main.ts
web/src/components/: Chart.vue
web/src/components/svg/: MarketInsert.vue  formatter.ts
web/src/router/: index.ts
web/src/views/: AllMetrics.vue  Dashboard.vue  Home.vue
