[package]
name = "metrix_exporter"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11.1", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.2.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde"] }
